@@ -1,14 +1,13 @@
 Package: vegan
 Title: Community Ecology Package
 Version: 2.0-9
-Date: July 10, 2013
+Date: August 26, 2013
 Author: Jari Oksanen, F. Guillaume Blanchet, Roeland Kindt, Pierre Legendre, 
    Peter R. Minchin, R. B. O'Hara, Gavin L. Simpson, Peter Solymos, 
    M. Henry H. Stevens, Helene Wagner  
 Maintainer: Jari Oksanen <jari.oksanen@oulu.fi>
-Depends: permute
-Imports: lattice
-Suggests: MASS, mgcv, lattice, cluster, scatterplot3d, rgl, tcltk 
+Depends: lattice, permute
+Suggests: MASS, mgcv, cluster, scatterplot3d, rgl, tcltk 
 Description: Ordination methods, diversity analysis and other
   functions for community and vegetation ecologists.
 License: GPL-2 
