@@ -1,7 +1,6 @@
 `densityplot.oecosimu` <-
     function(x, data, xlab = "Simulated", ...)
 {
-    require(lattice) || stop("requires package 'lattice'")
     obs <- x$oecosimu$statistic
     sim <- rbind(obs, t(x$oecosimu$simulated))
     nm <- names(obs)[col(sim)]
