@@ -199,7 +199,6 @@ dat
 Agropyron <- with(dat, as.numeric(field) + as.numeric(NO3)+2) +rnorm(12)/2
 Schizachyrium <- with(dat, as.numeric(field) - as.numeric(NO3)+2) +rnorm(12)/2
 total <- Agropyron + Schizachyrium
-library(lattice)
 dotplot(total ~ NO3, dat, jitter.x=TRUE, groups=field,
         type=c('p','a'), xlab="NO3", auto.key=list(columns=3, lines=TRUE) )
 
